--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,6 +13,9 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
+  --button-bg-color: #3d3d3d;  
+  --primary-color-text: #272727;  
+  --secundary-color-text: #555555;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -26,5 +29,8 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --button-bg-color: #9e9e9e;  
+  --primary-color-text: #e7e7e7;  
+  --secundary-color-text: #b4b4b4;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
